# umd-annotation-tool

./: .env   .env.default  .gitignore  LICENSE  NOTICE  README.md  docker-compose.local.https.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  spellcheck.yaml  wordlist.txt
.github/: spellcheck.yaml
.github/workflows/: spelling.yml  workflow.yml
client/: README.md  package.json  tsconfig.cli.json  vue.config.js
client/dive-common/: apispec.ts  constants.ts
client/dive-common/components/: AttributesSideBar.vue  BrandIcon.vue  ControlsContainer.vue  EditorMenu.vue  ImportMultiCamDialog.vue  Sidebar.vue  SidebarContext.vue  StackedVirtualSidebarContainer.vue  TrackDetailsPanel.vue  Viewer.vue
client/dive-common/store/: context.ts
client/dive-common/use/: useModeManager.ts
client/platform/web-girder/: App.vue  constants.ts  main.ts  router.ts  utils.ts
client/src/: BaseAnnotation.ts  provides.ts  track.ts
client/src/components/: LayerManager.vue  UMDAnnotation.vue  UMDAnnotationWrapper.vue  UMDChangepoint.vue  UMDRemediation.vue  UMDTA2Annotation.vue  UMDTA2AnnotationCreator.vue  UMDTA2AnnotationWizard.vue  UMDTA2AnnotationWrapper.vue  UMDTA2Translation.vue
docker/: dynamic.local.https.yml  entrypoint_worker.sh  girder.Dockerfile  girder_worker.Dockerfile  server_setup.py
scripts/: CheckScript.py  JSONLConverter.py  TabToJSON.py  base64_stripper.py  cloneAndConvert.py  cloneTestFolders.py  convertFolder.py  convertedJSONtoTrackJSON.py  converter.py  importScript.py  readExcel.py  requirements.txt  slideAnnotations.py  testConnection.py
scripts/IngestingTA2Annotations/: JSONLConverter.py  README.md  cloneAndConvert.py  convertFolder.py  requirements.txt
server/: .env.default  pyproject.toml  tox.ini
server/.github/: workflow.yml
server/UMD_server/: __init__.py  client_webroot.py
server/UMD_server/UMD_configuation/: views.py
server/UMD_server/UMD_configuration/: views.py
server/UMD_server/UMD_dataset/: event.py  views.py
server/UMD_tasks/: __init__.py  __main__.py  constants.py  tasks.py  utils.py
server/UMD_utils/: UMD_export.py  __init__.py  constants.py  models.py
(+41 files in other folders)
